--- a/app.yaml
+++ b/app.yaml
@@ -14,8 +14,11 @@ handlers:
 
 - url: /static
   static_dir: static
-    
   
+- url: /js/(.*\.js)
+  static_files: static/js/\1
+  upload: static/js/(.*\.js)
+     
 - url: .*
   script: main.app
 
