--- a/index.yaml
+++ b/index.yaml
@@ -22,6 +22,13 @@ indexes:
   - name: created
     direction: desc
 
+- kind: Message
+  ancestor: yes
+  properties:
+  - name: recipientIDs
+  - name: created
+    direction: desc
+
 - kind: insiderContent
   properties:
   - name: author
