--- a/app.yaml
+++ b/app.yaml
@@ -20,7 +20,10 @@ handlers:
 - url: /js/(.*\.js)
   static_files: static/js/\1
   upload: static/js/(.*\.js)
-     
+
+- url: /test.*
+  script: gaeunit.py
+  
 - url: .*
   script: main.app
 
